--- a/components/layout/main-header.module.css
+++ b/components/layout/main-header.module.css
@@ -4,6 +4,11 @@
     background-color: black;
     color: white;
     padding: 10px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
 }
 
 .drawer{
