--- a/components/projects/project.module.css
+++ b/components/projects/project.module.css
@@ -9,3 +9,11 @@
     margin-top: 50px;
     max-width: 500px;
 }
+
+.sec{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+}
