--- a/pages/contact/contact.module.css
+++ b/pages/contact/contact.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: flex-start;
     margin-top: 100px;
-    height: 70vh;
+    /* height: 70vh; */
 }
 
 .div{
