--- a/components/user/background.module.css
+++ b/components/user/background.module.css
@@ -19,10 +19,12 @@
 }
 
 .h4{
+    width: 80%;
     font-size: 20px;
-    margin: 5px;
+    margin: 5px auto;
     margin-bottom: 10px;
     font-weight: bold;
+
     
 }
 
