--- a/components/user/details.module.css
+++ b/components/user/details.module.css
@@ -1,52 +1,67 @@
-.section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.26);
-    width: 95%;
-    margin: 10px auto;
-    border-radius: 10px;
-    transform: translateY(-60px);
-    z-index: 20;
-    background-color: white;
-    /* max-width: 600px; */
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.26);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.26);
+  width: 95%;
+  margin: 10px auto;
+  border-radius: 10px;
+  transform: translateY(-60px);
+  z-index: 20;
+  background-color: white;
+  /* max-width: 600px; */
 }
 
-.image{
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 20px;
+.image {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 20px;
+  padding: 2rem;
 }
 
-.img{
-    border-radius: 50%;
-    width: 60%;
-    height: 60%;
+.img {
+  border-radius: 50%;
+  width: 60%;
+  height: 60%;
 }
 
-.bio{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.bio {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.bio p{
-    margin: 3px;
-}
-
-.developing{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    margin: 0  auto;
+.bio p {
+  margin: 3px;
 }
 
-.divider{
-    width: 5px;
-    height: 5px;
+.developing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.divider {
+  width: 5px;
+  height: 5px;
+}
+
+.des {
+  width: 60%;
+  margin: auto;
+  line-height: 2;
+  padding: 3rem;
+}
+
+@media (max-width:500px){
+    .des{
+        width: 100%;
+    }
 }
