--- a/pages/certificates/certificate.module.css
+++ b/pages/certificates/certificate.module.css
@@ -1,3 +1,7 @@
+.section{
+    width: 90%;
+    margin: auto;
+}
 .card{
     margin: 10px;
     max-width: 300px;
@@ -6,5 +10,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 2px 2px 2px rgba(0,0, 0, .2);
+    box-shadow: 2px 2px 8px rgba(0,0, 0, .2);
 }
