--- a/pages/contact/contact.module.css
+++ b/pages/contact/contact.module.css
@@ -1,33 +1,38 @@
-.section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 100px;
-    /* height: 70vh; */
+.section {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  gap: 1rem;
 }
 
-.div{
-    background-color: white;
-    padding: 10px;
-    width: 90%;
-    margin: 10px auto;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 1px 1px 1px rgba(0,0,0,0.26);
-    border-radius: 20px;
-
+.div {
+  background-color: white;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.26);
+  width: 300px;
+  min-width: 300px;
+  padding: 0.5rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  border-radius: 0.3rem;
 }
 
-.sub{
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
-}
+/* .sub {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+} */
 
-@media (min-width:500px){
-    .div{
-        width: 60%;
-    }
-}
+/* @media (min-width: 500px) {
+  .div {
+    width: 60%;
+  }
+} */
