--- a/pages/test/project.module.css
+++ b/pages/test/project.module.css
@@ -24,13 +24,24 @@
   padding: 1rem;
   min-width: 200px;
   width: 300px;
-  box-shadow: 2px 2px 8px #eee;
   margin: 1rem;
   text-align: center;
+  border: 1px solid #eee;
+  transition: transform 2s;
+}
+
+.project:hover{
+  transform: scale(1.1);
 }
 
 .a {
   font-size: 1rem;
   color: orangered;
   cursor: pointer;
+}
+
+.a:hover{
+  border: 1px solid orange;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
 }
