mobile view bug fix

--- a/pages/test/first.module.css
+++ b/pages/test/first.module.css
@@ -1,15 +1,14 @@
 .section {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   height: 100vh;
   background-color: #1c1d25;
   color: #fff;
-  flex-wrap: wrap;
-  margin: 0;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
   width: 100%;
-
 }
-
 
 .navbar {
   display: flex;
@@ -22,44 +21,51 @@
   background-color: #1c1d25;
   flex-wrap: wrap;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  color: #fff;
+}
 
+.navbar li {
+  cursor: pointer;
+  text-decoration: none;
+
+  text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.9);
+  font-size: 3rem;
+}
+
+.navbar li a {
+  color: #fff;
+  text-decoration: none;
 
 }
 
-.navbar li{
-    cursor: pointer;
-    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.9);
-    font-size: 3rem;
-
+.name {
+  font-size: 2rem;
+  text-align: center;
 }
 
-.name{
-    /* padding: 3rem; */
-    font-size: 2rem;
-    text-align: center;
-    padding-top: 3rem;
+.name h4 {
+  margin: 0;
+  margin-bottom: 1rem;
 }
 
-.name h4{
-    margin: 0;
-    margin-bottom: 1rem;
-}
-
-/* button */
 .btn {
-    text-decoration: none;
-    cursor: pointer;
-    font: inherit;
-    background-color: #03be9f;
-    border: 1px solid #03be9f;
-    border-radius: 6px;
-    color: #dafff7;
-    padding: 0.5rem 1.5rem;
-    text-align: center;
-    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
-    }
-    .btn:hover,
-    .btn:active {
-    background-color: #02afa1;
-    border-color: #02afa1;
-    }
+  text-decoration: none;
+  cursor: pointer;
+  font: inherit;
+  background-color: #03be9f;
+  border: 1px solid #03be9f;
+  border-radius: 6px;
+  color: #dafff7;
+  padding: 0.5rem 1.5rem;
+  text-align: center;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.2);
+  width: 250px;
+  text-align: center;
+}
+.btn:hover,
+.btn:active {
+  background-color: #02afa1;
+  border-color: #02afa1;
+}
