--- a/pages/test/contact.module.css
+++ b/pages/test/contact.module.css
@@ -5,7 +5,6 @@
   color: #fff;
   flex-wrap: wrap;
   margin: 0;
-  width: 100%;
   padding: 2rem;
   text-align: center;
 }
@@ -14,4 +13,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
+
 }
