--- a/pages/test/quotes.module.css
+++ b/pages/test/quotes.module.css
@@ -26,6 +26,9 @@
   border: 2px solid #eee;
   transition: transform 2s;
   flex: 1;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 0.5rem;
 }
 
 /* @media (max-width: 500px) {
@@ -53,4 +56,8 @@
 .quote h2 bold {
     font-size: 5rem;
     margin: 0;
+}
+
+.sub{
+  width: 100%;
 }
