--- a/pages/test/quotes.module.css
+++ b/pages/test/quotes.module.css
@@ -6,8 +6,17 @@
   flex-wrap: wrap;
   margin: 0;
   align-items: center;
-  padding: 10rem 0;
+  padding: 5rem 0;
   border-bottom: 1px solid #eee;
+}
+
+
+.section h1 {
+  text-shadow: 2px 2px 8px rgba(255, 255, 255, 0.5);
+  font-size: 4rem;
+  color: #000;
+  
+  font-weight: bold;
 }
 
 .quotes {
