--- a/pages/test/skill.module.css
+++ b/pages/test/skill.module.css
@@ -1,47 +1,48 @@
 .section {
-    display: flex;
-    flex-direction: column;
-    background-color: #1c1d25;
-    color: #fff;
-    flex-wrap: wrap;
-    margin: 0;
-    width: 100%;
-    align-items: center;
-    padding: 10rem 0;
-  
-  }
-
-  .section h1{
-      margin-top: 1rem;
-      margin-bottom: 5rem;
-  }
-
-  .skills{
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-      width: 95%;
-      margin: 1rem auto;
-      text-align: center;
-  }
-
-  .skill{
-      /* border: 1px solid #eee; */
-      /* border-radius: 50%; */
-      padding: 1rem;
-      text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #1c1d25;
+  color: #fff;
+  flex-wrap: wrap;
+  margin: 0;
+  width: 100%;
+  align-items: center;
+  padding: 10rem 0;
+}
 
 
-  }
+.section h1 {
+  text-shadow: 2px 2px 8px rgba(255, 255, 255, 0.5);
+  font-size: 4rem;
+  color: #000;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 5rem;
+  font-weight: bold;
+}
 
-  .skill:hover{
-      transform: scale(1.05);
-  }
+.skills {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  width: 95%;
+  margin: 1rem auto;
+  text-align: center;
+}
 
-  .skill img{
-      border-radius: 50%;
+.skill {
+  /* border: 1px solid #eee; */
+  /* border-radius: 50%; */
+  padding: 1rem;
+  text-align: center;
+}
 
-  }
+.skill:hover {
+  transform: scale(1.05);
+}
+
+.skill img {
+  border-radius: 50%;
+}
