--- a/pages/components/projects.module.css
+++ b/pages/components/projects.module.css
@@ -111,6 +111,20 @@
 
   }
 
+  .svg__icons{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    
+  }
+
+  .svg__icon{
+    display: flex;
+    width: 60px;
+  }
+
   .project{
     flex-direction: column;
   }
